# urbanstack

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md
.github/workflows/: ci.yml  deploy.yml
docs/: ARCHITECTURE.md  FUTURE.md  future_development.md
docs/sources/: acs.md  epa_sld.md  fars.md  fhwa.md  gtfs.md  (+5 more)
pipeline/: pyproject.toml
pipeline/scripts/: build_transit_geojson.py  fetch_block_group_geojson.py  fetch_county_geojson.py
pipeline/src/urbanstack/: cli.py  config.py  geography.py  metro.py  utils.py
pipeline/src/urbanstack/contracts/: acs.py  epa_sld.py  fars.py  fhwa.py  gazetteer.py  gtfs.py  ntd.py  osm_parks.py  tmas_stations.py  umr.py  usaspending.py
pipeline/src/urbanstack/extract/: _socrata.py  acs.py  epa_sld.py  fars.py  fhwa.py  gazetteer.py  gtfs.py  ntd.py  osm_parks.py  tmas_stations.py  transit_discovery.py  umr.py  usaspending.py
pipeline/src/urbanstack/load/: duckdb_loader.py
pipeline/src/urbanstack/transform/: _shared.py  block_group_mart.py  county_mart.py  derived.py  metro_mart.py  spatial.py
pipeline/tests/: conftest.py  test_config.py  test_contracts.py  test_metro.py
pipeline/tests/test_extract/: test_acs.py  test_epa_sld.py  test_fars.py  test_fhwa.py  test_gazetteer.py  test_gtfs.py  test_ntd.py  test_osm_parks.py  test_transit_discovery.py  test_umr.py  test_usaspending.py
pipeline/tests/test_load/: test_duckdb_loader.py
pipeline/tests/test_transform/: test_block_group_mart.py  test_county_mart.py  test_metro_mart.py  test_spatial.py
web/: CLAUDE.md  next.config.ts  package-lock.json  package.json
(+93 files in other folders)
