[project]
name = "urbanstack"
version = "0.1.0"
description = "Multi-layer urban data pipeline for UrbanStack"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32",
    "polars>=1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.2.2",
    "truststore>=0.10.4",
    "duckdb>=1.5.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/urbanstack"]

[tool.ruff]
target-version = "py313"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["urbanstack"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
